# arrakis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.txt  Makefile  PR_DESCRIPTION.md  README.md  SECURITY_ANALYSIS.md  SECURITY_DOCS_README.md  SECURITY_FIXES_IMPLEMENTATION_GUIDE.md  SECURITY_IMPROVEMENTS.md  SECURITY_SUMMARY.md  cleanup-branches.sh  create-pr.sh  docker-compose.dev.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  SECURITY_SETUP.md  env.sample  pyproject.toml  requirements.txt
backend/app/: __init__.py  __main__.py  main.py
backend/app/api/: __init__.py  analytics.py  dashboard.py  health.py
backend/app/core/: __init__.py  auth.py  config.py  cors.py  logging.py  middleware.py  rate_limit.py  security.py  security_logging.py  validation.py
backend/app/services/: __init__.py  clients.py  perplexity_client.py
backend/app/services/judge/: __init__.py
backend/app/services/rules/: __init__.py
backend/app/supabase/: __init__.py  client.py
backend/supabase/sql/: 000_complete_schema_safe.sql
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_config.py  test_cors.py  test_health.py
docs/: API.md  DEPLOYMENT.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  env.local.sample  next.config.js  package.json
frontend/__tests__/: Navigation.test.tsx  page.test.tsx
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/analysis/: page.tsx
frontend/app/api/dashboard/: route.ts
frontend/app/dashboard/: page.tsx
frontend/components/: Navigation.tsx  NavigationWrapper.tsx
frontend/lib/: config.ts
